# pajatsinko

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: board.h  peg.h
src/: board.cpp  main.cpp  peg.cpp
tests/: test_board.cpp  test_peg.cpp
